<resources>
    <string name="app_name">Ringo Wallet</string>
    <string name="wannabit_pro_url">https://wallet-api.wannabit.io/</string>
    <string name="crypto_compare_url">https://min-api.cryptocompare.com/</string>
    <string name="ether_scan_url">http://api.etherscan.io/</string>
    <string name="blockchain_info_url">https://blockchain.info/</string>
    <string name="blockcypher_info_url">https://api.blockcypher.com/</string>
    <string name="gastracker_info_url">https://api.gastracker.io/</string>
    <string name="blockdozer_info_url">https://bch.blockdozer.com/</string>
    <string name="qtum_info_url">https://explorer.qtum.org/</string>
    <string name="infura_url">https://mainnet.infura.io/</string>
    <string name="db_pw">test</string>
    <string name="title_create_restore">Create Wallet</string>
    <string name="title_private_key">Private Key</string>
    <string name="title_create_new_wallet">Create New Wallet</string>
    <string name="title_restore_mnemonics">Restore Mnemonics</string>
    <string name="title_confirm_new_mnemonic">Confirm New Mnemonics</string>
    <string name="title_set_password">Password Set</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_price">Price</string>
    <string name="title_setting">Setting</string>
    <string name="title_total_balance">Total Balance</string>
    <string name="title_check_password">Password</string>
    <string name="dialog_title_set_fingerprint">Using Fingerprint</string>
    <string name="dialog_init_wallet">No Wallet</string>
    <string name="dialog_add_wallet">Add New Wallet</string>
    <string name="dialog_add_key_pair">Add New Wallet</string>
    <string name="dialog_send_request_success_title">Send Request Success</string>
    <string name="dialog_delete_title">Delete Key</string>
    <string name="dialog_delete_msg">I hope you have backed up your key or mnemonics.\nDelete without backup, you will never find this key again.</string>
    <string name="dialog_title_no_mnemonic">No Mnemonic</string>
    <string name="dialog_title_open_source">Open source reference</string>
    <string name="str_restore">Restore</string>
    <string name="str_skip">Skip this</string>
    <string name="str_private_key">Private Key</string>
    <string name="str_mnemonic">Mnemonic</string>
    <string name="str_paste">Paste</string>
    <string name="str_delete">Delete</string>
    <string name="str_next">Next</string>
    <string name="str_create">Create</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_update">Update</string>
    <string name="str_copy">Copy</string>
    <string name="str_explore">Explore</string>
    <string name="str_start">Start</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_close">Close</string>
    <string name="str_ok">OK</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_insert">Insert</string>
    <string name="str_coming_soon">Coming soon</string>
    <string name="str_send">Send</string>
    <string name="str_receive">Receive</string>
    <string name="str_swap">Swap</string>
    <string name="str_sent">Sent</string>
    <string name="str_received">Received</string>
    <string name="str_total_balance">Total Balance</string>
    <string name="str_recipient_address">Recipient Address</string>
    <string name="str_qrcode">QR Code</string>
    <string name="str_recent">Recent</string>
    <string name="str_send_amount">Send Amount</string>
    <string name="str_clear">Clear</string>
    <string name="str_key_pair_manage">Key Manage</string>
    <string name="str_mnemonic_manage">Mnemonic Manage</string>
    <string name="str_currency">Currency</string>
    <string name="str_decimal_manage">Display Decimal Position</string>
    <string name="str_private">Private</string>
    <string name="str_homepage">About Us</string>
    <string name="str_telegram">Telegram</string>
    <string name="str_github">GitHub</string>
    <string name="str_opensource">Open Source Licence</string>
    <string name="str_usd">USD</string>
    <string name="str_krw">KRW</string>
    <string name="str_tx_history">Transaction History</string>
    <string name="str_total_fee">Total Fee</string>
    <string name="str_remaining_balance">Remaining Balance</string>
    <string name="str_with_private_key">Private Key</string>
    <string name="str_mnemonic_check">Mnemonic check</string>
    <string name="str_lock_time">Lock Time</string>
    <string name="str_lock_time_set">Lock Time Set</string>
    <string name="str_fingerprint">Fingerprint</string>
    <string name="str_error">Network error</string>
    <string name="str_mnemonics">Mnemonics</string>
    <string name="str_enter_mnemonics">Enter Mnemonics</string>
    <string name="str_share">Share</string>
    <string name="str_balance_of">balanceOf</string>
    <string name="str_transfer_from">transferFrom</string>
    <string name="msg_ringo_greeting">Welcome to Ringo Wallet</string>
    <string name="msg_restore_by_key">Restore by Private Key</string>
    <string name="msg_restore_by_mnemonic">Restore by Mnemonics</string>
    <string name="msg_new_wallet">Create new Mnemonics</string>
    <string name="msg_no_wallet">No registered wallet.</string>
    <string name="msg_start_app">Start Ringo Wallet.</string>
    <string name="msg_select_coin">Select Coin</string>
    <string name="msg_restore_mnemonics_msg01">Please, Insert your mnemonics</string>
    <string name="msg_generate_msg01">Please, Copy the words below.</string>
    <string name="msg_generate_msg02">When you restore your wallet, you can prove you own the wallet with those word. \nPut it on paper and keep it in a safe place.</string>
    <string name="msg_copied">Copied to clipboard</string>
    <string name="msg_confirm_msg01">Checking Mnemonics.</string>
    <string name="msg_confirm_msg02">Please select the appropriate words in order.\nIf they do not match, restoration is not possible.</string>
    <string name="msg_confirm_failed">Please remember your Mnemonic.</string>
    <string name="msg_password_init">Please insert your password.</string>
    <string name="msg_password_confirm">Insert again for confirm.</string>
    <string name="msg_password_validate">Insert your password for continue.</string>
    <string name="msg_password_warning">Can not recover if you forget.</string>
    <string name="msg_password_send">Please type your password for send budget.</string>
    <string name="msg_password_check">Please type your password for more information.</string>
    <string name="msg_password_unlock">Please type your password for unlock.</string>
    <string name="msg_using_fingerprint">Do you want to enable fingerprint authentication?</string>
    <string name="msg_password_init_success">Your password has been saved securely.</string>
    <string name="msg_init_wallet">No wallet registered. Would you like to create a basic wallet with your mnemonics?</string>
    <string name="msg_new_key_pair">How do you create a new wallet for %1$s?</string>
    <string name="msg_gen_from_mnemonic">Generate from Mnemonic</string>
    <string name="msg_gen_with_private_key">Insert New Private Key</string>
    <string name="msg_add_key_success">New wallet are generated successfully.</string>
    <string name="msg_wallet_made_success">Wallet initial setup completed successfully.</string>
    <string name="msg_coming_soon">preparing coin quotes. start the service soon!</string>
    <string name="msg_no_transaction">No transaction history.</string>
    <string name="msg_full_position">Display Full Position</string>
    <string name="msg_4_position">Display 4 Position</string>
    <string name="msg_6_position">Display 6 Position</string>
    <string name="msg_under_at_min">At least %1$s</string>
    <string name="msg_send_confirm">Please check below carefully, \nbefore send your budget.</string>
    <string name="msg_send_request_success">Send transaction request is success, you can check with txid in block chain explore.</string>
    <string name="msg_total_fee">Total Estimated Fee</string>
    <string name="msg_invalid_amount">Invalid Amount</string>
    <string name="msg_password_wrong">Wrong Password.</string>
    <string name="msg_no_favo_list">No Favorite Wallet.</string>
    <string name="msg_welcome_title_1">Multiple</string>
    <string name="msg_welcome_msg1_1">Displays the status of various coin assets.</string>
    <string name="msg_welcome_msg2_1">(BTC, ETH, ERC20, ETC, LTC, ...)</string>
    <string name="msg_welcome_title_2">Decentralized</string>
    <string name="msg_welcome_msg1_2">Perfectly decentralized<![CDATA[" & "]]>user friendly</string>
    <string name="msg_welcome_msg2_2">Crypto wallet for everyone from beginners to skilled users.</string>
    <string name="msg_welcome_title_3">Reliable</string>
    <string name="msg_welcome_msg1_3">Fully open source.</string>
    <string name="msg_welcome_msg2_3">Our source is open for you to check and validate.</string>
    <string name="msg_check_mnemonic">Checking Mnemonics.</string>
    <string name="msg_check_key">Checking Private Key.</string>
    <string name="msg_delete_key_success">Delete key successfully.</string>
    <string name="msg_can_not_delete_last_key">Can not delete last key.</string>
    <string name="msg_update_msg">New version available. \nWould you like to update the application?</string>
    <string name="msg_update_force_msg">Update required to continue using application. \nWould you like to update the application?</string>
    <string name="msg_prepareing_swap">Preparing</string>
    <string name="msg_request_finger">Use your fingerprint for password</string>
    <string name="msg_no_mnemonic">No Mnemonics are registered. Do you want to init it now?</string>
    <string name="msg_open_source"><a href="https://github.com/bitcoinj/bitcoinj">BitCoinj</a>\nA library for working with Bitcoin.\n\n\n<a href="https://github.com/web3j/web3j">Web3j</a>\nLightweight Java and Android library for integration with Ethereum clients.\n\n\n<a href="https://github.com/square/retrofit">Retrofit</a>\nType-safe HTTP client for Android and Java by Square, Inc.\n\n\n<a href="https://github.com/sqlcipher/android-database-sqlcipher">android-database-sqlcipher</a>\nAndroid SQLite API based on SQLCipher.\n\n\n<a href="https://github.com/aurelhubert/ahbottomnavigation">ahbottomnavigation</a>\nA library to reproduce the behavior of the Bottom Navigation guidelines from Material Design.\n\n\n<a href="https://github.com/ongakuer/CircleIndicator">CircleIndicator</a>\nA lightweight indicator like in nexus 5 launcher.\n\n\n<a href="https://github.com/ParkSangGwon/TedPermission">TedPermission</a>\nasy check permission library for Android Marshmallow.\n\n\n<a href="https://github.com/bumptech/glide">Glide</a>\nAn image loading and caching library for Android focused on smooth scrolling.\n\n\n<a href="https://github.com/journeyapps/zxing-android-embedded">Zxing</a>\nQR-Code\n\n\n</string>
    <string name="font_regular">montserrat/Montserrat-Regular.otf</string>
    <string name="font_bold">montserrat/Montserrat-Bold.otf</string>
    <string name="font_light">montserrat/Montserrat-Light.otf</string>
    <string name="msg_error_invalid_key">Invalid key.</string>
    <string name="msg_error_permission">You rejected permission. please enable for this.</string>
    <string name="msg_error_invalid_address">Invalid address.</string>
    <string name="msg_error_password_not_same">Password is not same. Please init password again!</string>
    <string name="msg_error_clipboard">No text from clipboard.</string>
    <string name="msg_error_self_address">Self address are not support.</string>
    <string name="msg_key_already_existed">This key, you have already entered.</string>
    <string name="msg_not_enough_balance">This address has zero balance to send.</string>
</resources>