<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_32">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            style="@style/font_15_black1"
            android:gravity="center"
            android:text="@string/dialog_init_wallet"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginRight="@dimen/space_12"
            android:layout_marginLeft="@dimen/space_12"
            style="@style/font_15_gray1"
            android:gravity="center_horizontal"
            android:text="@string/msg_init_wallet"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_nega"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_dia_white_left"
                style="@style/font_15_primary"
                android:textAllCaps="false"
                android:text="@string/str_no"/>
            <Button
                android:id="@+id/btn_posi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_dia_white_right"
                style="@style/font_15_primary"
                android:textAllCaps="false"
                android:text="@string/str_yes"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>