<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_32">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/space_36"
                android:layout_height="@dimen/space_36"
                android:src="@drawable/fail_ic"/>

            <TextView
                android:id="@+id/no_mnemonic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_12"
                style="@style/font_14_black1"
                android:gravity="center"
                android:text="@string/dialog_title_no_mnemonic"/>
        </LinearLayout>


        <TextView
            android:id="@+id/no_mnemonic_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginRight="@dimen/space_12"
            android:layout_marginLeft="@dimen/space_12"
            style="@style/font_12_gray1"
            android:gravity="center_horizontal"
            android:text="@string/msg_no_mnemonic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_nega"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_dia_white_left"
                style="@style/font_15_primary"
                android:textAllCaps="false"
                android:text="@string/str_close"/>
            <Button
                android:id="@+id/btn_posi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_dia_white_right"
                style="@style/font_15_primary"
                android:textAllCaps="false"
                android:text="@string/str_create"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>