<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image_top"
            android:layout_width="@dimen/space_50"
            android:layout_height="@dimen/space_50"
            android:src="@drawable/wallet_done_img"
            android:transitionName="topImage"/>

        <TextView
            android:id="@+id/create_msg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_28"
            android:layout_marginRight="@dimen/space_28"
            android:layout_marginTop="@dimen/space_18"
            android:gravity="center"
            style="@style/font_15_black1"
            android:lineSpacingExtra="11sp"
            android:text="@string/msg_start_app"/>

        <Button
            android:id="@+id/btn_restore_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_28"
            android:layout_marginRight="@dimen/space_28"
            android:layout_marginTop="@dimen/space_40"
            android:minHeight="@dimen/space_50"
            android:background="@drawable/btn_black_rect_round"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/btn_text_color"
            android:text="@string/msg_restore_by_key"
            android:textAllCaps="false"
            android:outlineProvider="none"/>

        <Button
            android:id="@+id/btn_restore_mnemonic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_28"
            android:layout_marginRight="@dimen/space_28"
            android:layout_marginTop="@dimen/space_8"
            android:minHeight="@dimen/space_50"
            android:background="@drawable/btn_black_rect_round"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/btn_text_color"
            android:text="@string/msg_restore_by_mnemonic"
            android:textAllCaps="false"
            android:outlineProvider="none"/>

        <Button
            android:id="@+id/btn_new_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_28"
            android:layout_marginRight="@dimen/space_28"
            android:layout_marginTop="@dimen/space_8"
            android:minHeight="@dimen/space_50"
            android:background="@drawable/btn_pri_rect_round"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/btn_text_color"
            android:text="@string/msg_new_wallet"
            android:textAllCaps="false"
            android:outlineProvider="none"/>
    </LinearLayout>
</RelativeLayout>