<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:gravity="center"
                android:orientation="vertical">
                <View
                    android:id="@+id/dummy"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:clickable="true"/>

                <ImageView
                    android:id="@+id/image_top"
                    android:layout_width="@dimen/space_50"
                    android:layout_height="@dimen/space_50"
                    android:src="@drawable/wallet_refresh_img"
                    android:transitionName="topImage"/>

                <TextView
                    android:id="@+id/tv_restore_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_12"
                    android:layout_marginLeft="@dimen/space_28"
                    android:layout_marginRight="@dimen/space_28"
                    android:gravity="center"
                    style="@style/font_15_black1"
                    android:lineSpacingExtra="11sp"
                    android:text="@string/msg_restore_by_key"/>

                <RelativeLayout
                    android:id="@+id/btn_select_coin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_50"
                    android:layout_marginTop="@dimen/space_24"
                    android:layout_marginLeft="@dimen/space_28"
                    android:layout_marginRight="@dimen/space_28"
                    android:background="@drawable/input_box_gray2"
                    android:clickable="true">
                    <TextView
                        android:id="@+id/et_coin_name_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/msg_select_coin"
                        style="@style/font_12_gray2"/>
                    <LinearLayout
                        android:id="@+id/layer_selected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <ImageView
                            android:id="@+id/et_coin_img"
                            android:layout_width="@dimen/space_40"
                            android:layout_height="@dimen/space_40"
                            android:src="@drawable/bitcoin_ic"/>
                        <TextView
                            android:id="@+id/et_coin_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_8"
                            android:layout_centerVertical="true"
                            style="@style/font_12_black1"/>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/et_coin_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_down_btn"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/space_12"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:layout_marginLeft="@dimen/space_28"
                    android:layout_marginRight="@dimen/space_28">
                    <EditText
                        android:id="@+id/et_key_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/space_50"
                        android:maxLines="3"
                        android:hint="@string/str_private_key"
                        android:textColorHint="@color/color_font_gray2"
                        android:background="@drawable/input_box_white"
                        android:textCursorDrawable="@drawable/input_cursor"
                        android:paddingEnd="@dimen/space_60"
                        style="@style/font_12_black1"/>
                    <TextView
                        android:id="@+id/btn_add_paste"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/space_16"
                        android:padding="@dimen/space_4"
                        android:layout_centerVertical="true"
                        style="@style/font_12_primary"
                        android:text="@string/str_paste"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_key_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:layout_marginLeft="@dimen/space_28"
                    android:layout_marginRight="@dimen/space_28"
                    android:paddingLeft="@dimen/space_4"
                    style="@style/font_12_error_red"
                    android:text="@string/msg_error_invalid_key"/>

            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>
    <Button
        android:id="@+id/btn_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/space_50"
        android:layout_marginLeft="@dimen/space_28"
        android:layout_marginRight="@dimen/space_28"
        android:layout_marginBottom="@dimen/space_28"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_black_rect_round"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/btn_text_color"
        android:text="@string/str_restore"
        android:textAllCaps="false"
        android:outlineProvider="none"/>
</RelativeLayout>